fixing text not fitting in box for charmander

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body{
   color: black;
   background-color: white;
   padding-top: 60px;
-  font-size: 26px;
+  font-size: 24px;
 }
 
 @media screen and (max-width: 640px) {
